--- a/src/app/app-nav.component.css
+++ b/src/app/app-nav.component.css
@@ -1,23 +1,3 @@
-div {
-    background: #2A9FBC;
-    border-radius: 0.5em;
-    margin: 1.5em 0;
-    padding: 1em 1.2em;
-}
-
-ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    color: #fff;
-    padding: 0 1em;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
+@import 'app-nav.component.global.css';
+@import 'app-nav.component.list.css';
+@import 'app-nav.component.links.css';
