--- a/src/app/app-nav.component.scss
+++ b/src/app/app-nav.component.scss
@@ -1,6 +1,7 @@
-div {
-    background: #2A9FBC; 
+:host-context(.example){
+    background: #66662E5C; 
     border-radius: 0.5em; 
+    display: block;
     margin: 1.5em 0; 
     padding: 1em 1.2em;
 }
