--- a/src/app/app-nav.component.scss
+++ b/src/app/app-nav.component.scss
@@ -13,12 +13,12 @@ ul {
     padding: 0;
 }
 
-a {
-    color: #fff; 
+:host ul ::ng-deep a {
+    color: #fff;
     padding: 0 1em; 
     text-decoration: none;
 }
 
-a:hover {
+:host ul ::ng-deep a:hover {
     text-decoration: underline;
 }
