--- a/src/app/shared/scss/root/_colors.scss
+++ b/src/app/shared/scss/root/_colors.scss
@@ -2,17 +2,17 @@
 // _________________________________________________________________________________________
 
 // 01
-$color__primary--01a:   #F15B2A;
-$color__primary--01b:   #C43B0E;
-$color__primary--01c:   #F69C7E;
+$g-root__color--primary--01a:   #F15B2A;
+$g-root__color--primary--01b:   #C43B0E;
+$g-root__color--primary--01c:   #F69C7E;
 
 // 02
-$color__primary--02a:   #2A9FBC;
-$color__primary--02b:   #1F778D;
-$color__primary--02c:   #76CBE0;
+$g-root__color--primary--02a:   #2A9FBC;
+$g-root__color--primary--02b:   #1F778D;
+$g-root__color--primary--02c:   #76CBE0;
 
 // 03
-$color__primary--03a:   #404040;
+$g-root__color--primary--03a:   #404040;
 
 
 
@@ -21,21 +21,21 @@ $color__primary--03a:   #404040;
 // _________________________________________________________________________________________
 
 // 01
-$color__secondary--01a: #A62E5C;
-$color__secondary--01b: #7D2345;
-$color__secondary--01c: #D8739A;
+$g-root__color--secondary--01a: #A62E5C;
+$g-root__color--secondary--01b: #7D2345;
+$g-root__color--secondary--01c: #D8739A;
 
 // 02
-$color__secondary--02a: #8BC850;
-$color__secondary--02b: #77A032;
-$color__secondary--02c: #C3DE96;
+$g-root__color--secondary--02a: #8BC850;
+$g-root__color--secondary--02b: #77A032;
+$g-root__color--secondary--02c: #C3DE96;
 
 // 03
-$color__secondary--03a: #675BA7;
-$color__secondary--03b: #4D447E;
-$color__secondary--03c: #A49DCA;
+$g-root__color--secondary--03a: #675BA7;
+$g-root__color--secondary--03b: #4D447E;
+$g-root__color--secondary--03c: #A49DCA;
 
 // 04
-$color__secondary--04a: #171717;
-$color__secondary--04b: #303030;
-$color__secondary--04c: #E5E5E5;
+$g-root__color--secondary--04a: #171717;
+$g-root__color--secondary--04b: #303030;
+$g-root__color--secondary--04c: #E5E5E5;
