--- a/src/app/shared/components/content/accordion/accordion.component.scss
+++ b/src/app/shared/components/content/accordion/accordion.component.scss
@@ -1,3 +1,7 @@
+@use '../../../scss/root/links';
+
+
+
 
 :host {
     border-top: solid 1px #ccc;
@@ -10,12 +14,13 @@
     padding: 0;
 }
 
-.item {
+.item {        
     border: solid 1px #ccc;
     border-top: none;
 }
 
 .item__label {
+    @include links.g-root__link;
     display: flex;
     padding: 1em;
 }
