--- a/src/app/shared/components/navigation/navbar-primary/navbar-primary.component.scss
+++ b/src/app/shared/components/navigation/navbar-primary/navbar-primary.component.scss
@@ -1,20 +1,22 @@
 @use '../../../scss/root/colors';
+@use '../../../scss/layout/container';
 
 
 
 
 :host {
-    background: colors.$color__primary--01a;
+    background: colors.$g-root__color--primary--01a;
     display: block; 
     margin-top: 1.8em; 
     padding: 1em 0;
 }
 
 .items {
+    @include container.g-layout__container;
     display: flex; 
     list-style: none; 
-    margin: 0; 
-    padding: 0;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .item {
