--- a/src/app/shared/components/popups/modal/modal.component.scss
+++ b/src/app/shared/components/popups/modal/modal.component.scss
@@ -15,7 +15,7 @@
 
 .modal {
     backface-visibility: hidden;
-    background: colors.$color__primary--01a;
+    background: colors.$g-root__color--primary--01a;
     border-radius: 0.5em;
     color: white;
     height: 66.7vh;
