--- a/src/app/shared/components/popups/tooltip/tooltip.component.scss
+++ b/src/app/shared/components/popups/tooltip/tooltip.component.scss
@@ -1,4 +1,3 @@
-
 @use '../../../scss/root/colors';
 
 
@@ -12,7 +11,7 @@
 }
 
 .tooltip {
-    background-color: colors.$color__primary--03a;
+    background-color: colors.$g-root__color--primary--03a;
     border-radius: 0;
     color: white;
     font-size: 75%;
@@ -33,7 +32,7 @@
 .tooltip::before {
     border: inset 0.75rem;
     border-bottom-style: solid;
-    border-color: transparent transparent colors.$color__primary--03a;
+    border-color: transparent transparent colors.$g-root__color--primary--03a;
     border-top-width: 0;
     bottom: 100%;
     content: "";
