--- a/src/app/shared/components/navigation/navbar-secondary/navbar-secondary.component.html
+++ b/src/app/shared/components/navigation/navbar-secondary/navbar-secondary.component.html
@@ -1,22 +1,26 @@
-<ul class="items">
-    <li class="item">
-        <a class="item__link">
-            Home
-        </a>
-    </li>
-    <li class="item">
-        <a class="item__link">
-            Prerequisites
-        </a>
-    </li>
-    <li class="item">
-        <a class="item__link">
-            Modules
-        </a>
-    </li>
-    <li class="item">
-        <a class="item__link">
-            About
-        </a>
-    </li>
-</ul>
+<div class="navbar-secondary">
+    <div class="layout-container">
+        <ul class="navbar-secondary__items">
+            <li class="navbar-secondary__item">
+                <a class="navbar-secondary__item-link">
+                    Home
+                </a>
+            </li>
+            <li class="navbar-secondary__item">
+                <a class="navbar-secondary__item-link">
+                    Prerequisites
+                </a>
+            </li>
+            <li class="navbar-secondary__item">
+                <a class="navbar-secondary__item-link">
+                    Modules
+                </a>
+            </li>
+            <li class="navbar-secondary__item">
+                <a class="navbar-secondary__item-link">
+                    About
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
