--- a/src/app/shared/components/navigation/pills/pills.component.html
+++ b/src/app/shared/components/navigation/pills/pills.component.html
@@ -1,12 +1,14 @@
-<ul class="items">
+<ul class="pills">
     <li 
         *ngFor="let pill of pills, let i = index"
-        class="item"
-        [ngClass]="{'item--selected': selectedPill === pill.label}">
+        class="pills__item"
+        [ngClass]="{'pills__item--selected': selectedPill === pill.label}">
         <a 
             (click)="togglePill(pill.label)"
-            class="item__link"
-            [ngClass]="{'item__link--selected': selectedPill === pill.label || !selectedPill && i === 0}">
+            class="pills__item-link"
+            [ngClass]="{
+                'pills__item-link--selected': selectedPill === pill.label || 
+                !selectedPill && i === 0}">
             {{pill.label}}
         </a>
     </li>
