--- a/src/app/shared/components/popups/modal/modal.component.html
+++ b/src/app/shared/components/popups/modal/modal.component.html
@@ -1,20 +1,22 @@
-<a class="trigger" (click)="toggleOpenClose()">
-    <ng-content></ng-content>
-</a>
-<div 
-    [hidden]="!isOpen"
-    (click)="toggleOpenClose()"
-    class="shield">
-</div>
-<div 
-    [hidden]="!isOpen" 
-    class="modal">
-    <a 
-        (click)="toggleOpenClose()"
-        class="modal__close">
-        close
+<span class="modal">
+    <a class="modal__trigger" (click)="toggleOpenClose()">
+        <ng-content></ng-content>
     </a>
-    <div class="modal__content">
-        <ng-content select="saa-modal-content"></ng-content>
+    <div 
+        [hidden]="!isOpen"
+        (click)="toggleOpenClose()"
+        class="modal__shield">
     </div>
-</div>
+    <div 
+        [hidden]="!isOpen" 
+        class="modal__window">
+        <a 
+            (click)="toggleOpenClose()"
+            class="modal__close">
+            close
+        </a>
+        <div class="modal__content">
+            <ng-content select="saa-modal-content"></ng-content>
+        </div>
+    </div>
+</span>
