--- a/src/app/shared/components/popups/tooltip/tooltip.component.html
+++ b/src/app/shared/components/popups/tooltip/tooltip.component.html
@@ -1,4 +1,6 @@
-<ng-content></ng-content>
 <span class="tooltip">
-    <ng-content select="saa-tooltip-message"></ng-content>
+    <ng-content></ng-content>
+    <span class="tooltip__popup">
+        <ng-content select="saa-tooltip-message"></ng-content>
+    </span>
 </span>
