--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -1,9 +1,9 @@
-@use '../../../scss/root/colors';
+@use 'colors';
 
 
 
 
-.shield {
+.modal__shield {
     background: rgba(black, 0.75);
     bottom: 0;
     left: 0;
@@ -13,9 +13,9 @@
     z-index: 49;
 }
 
-.modal {
+.modal__window {
     backface-visibility: hidden;
-    background: colors.$g-root__color--primary--01a;
+    background: colors.$color__primary--01a;
     border-radius: 0.5em;
     color: white;
     height: 66.7vh;
