--- a/src/styles/_navbar-secondary.scss
+++ b/src/styles/_navbar-secondary.scss
@@ -1,35 +1,31 @@
-@use '../../../scss/layout/container';
-
-
-
-
-:host {
+.navbar-secondary {
     display: block;
     padding: 1em 0 1.8em;
 }
 
-.items {
-    @include container.g-layout__container;
+.navbar-secondary__items {
     display: flex; 
     list-style: none; 
+    margin: 0; 
+    padding: 0;
 }
 
-.item {
+.navbar-secondary__item {
     padding: 0 1em;
 }
 
-.item__link {
+.navbar-secondary__item-link {
     color: white; 
     cursor: pointer;    
     text-decoration: none;
 }
         
-.item__link:hover {
+.navbar-secondary__item-link:hover {
     color: white;
     text-decoration: underline;
 }
 
 // First
-.item:first-child {
+.navbar-secondary__item:first-child {
     padding-left: 0;
 }
