--- a/src/app/shared/components/content/accordion/accordion-pane/accordion-pane.component.html
+++ b/src/app/shared/components/content/accordion/accordion-pane/accordion-pane.component.html
@@ -1,5 +1,5 @@
 <ng-template>
-    <div class="accordion__pane">
+    <div class="pane">
         <ng-content></ng-content>
     </div>
 <ng-template>
