--- a/src/app/shared/components/content/accordion/accordion.component.html
+++ b/src/app/shared/components/content/accordion/accordion.component.html
@@ -1,13 +1,13 @@
-<ul class="accordion">
+<ul class="items">
     <li 
         *ngFor="let item of items; let i = index"
-        class="accordion__item"
-        [class.accordion__item--active]="activeIndex === i">
+        class="item"
+        [ngClass]="activeIndex === i ? 'item--active' : 'item--inactive'">
         <a 
             (click)="selectItem(i)"
-            class="accordion__label"
-            [class.accordion__label--active]="activeIndex === i">
-            <span class="accordion__label-text">
+            class="item__label"
+            [ngClass]="activeIndex === i ? 'item__label--active' : 'item__label--inactive'">
+            <span class="item__label-text">
                 {{item.title}}
             </span>
         </a>
