--- a/src/app/shared/components/content/tabs/tabs.component.html
+++ b/src/app/shared/components/content/tabs/tabs.component.html
@@ -1,16 +1,14 @@
-<div class="tabs">
-    <ul class="tabs__items">
-        <li 
-            *ngFor="let tab of tabs"
-            class="tabs__item"
-            [class.tabs__item--active]="tab.active">
-            <a 
-                (click)="selectTab(tab)"
-                class="tabs__item-link"
-                [class.tabs__item-link--active]="tab.active">
-                {{tab.title}}
-            </a>
-        </li>
-    </ul>
-    <ng-content></ng-content>
-</div>
+<ul class="items">
+    <li 
+        *ngFor="let tab of tabs"
+        class="item"
+        [ngClass]="tab.active ? 'item--active' : 'item--inactive'">
+        <a 
+            (click)="selectTab(tab)"
+            class="item__link"
+            [ngClass]="tab.active ? 'item__link--active' : 'item__link--inactive'">
+            {{tab.title}}
+        </a>
+    </li>
+</ul>
+<ng-content></ng-content>
