--- a/src/app/shared/components/navigation/pills/pills.component.html
+++ b/src/app/shared/components/navigation/pills/pills.component.html
@@ -1,14 +1,12 @@
-<ul class="pills">
+<ul class="items">
     <li 
         *ngFor="let pill of pills, let i = index"
-        class="pills__item"
-        [ngClass]="{'pills__item--selected': selectedPill === pill.label}">
+        class="item"
+        [ngClass]="pill.label || !selectedPill && i === 0 ? 'item--selected' : 'item--unselected'">
         <a 
             (click)="togglePill(pill.label)"
-            class="pills__item-link"
-            [ngClass]="{
-                'pills__item-link--selected': selectedPill === pill.label || 
-                !selectedPill && i === 0}">
+            class="item__link"
+            [ngClass]="selectedPill === pill.label || !selectedPill && i === 0 ? 'item__link--selected' : 'item__link--unselected'">
             {{pill.label}}
         </a>
     </li>
