--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,25 @@
                 Angular revolutionizes the way that you architect CSS for modern web applications. But before you can become Angular styling ninjas, you need to take a step back and consider the many different ways that things can be done. In this course, Styling Angular Applications, you'll explore how the framework aligns with web components and what that means for adding styles to components and apps in general. Throughout this course you'll develop systems geared towards organization, scale, and maintainability for HTML and CSS within Angular apps. As you get more comfortable adding and styling components within these systems, you'll consider component themes and the ways that you can transform their look under certain circumstances. By the end of this course, you'll have a strong knowledge of how Angular processes CSS and the many different ways it can be leveraged as part of an overall design system for creating beautiful, organized, maintainable, and future proof web applications.
             </p>
 
+            <p class="content__paragraph">
+                <saa-modal class="color--03">
+                    <strong>Click here to learn More!</strong>
+                    <saa-modal-content>
+                        <h1>Styling Angular Applications</h1>
+                        <saa-message class="layout--02">
+                            <saa-message-title>Your Account is Expiring!</saa-message-title>
+                            <saa-message-content>Your account will expire within the next thirty days. Please update your payment method in your account.</saa-message-content>
+                        </saa-message>
+                    </saa-modal-content>
+                    <saa-modal-highlight>
+                        <saa-message class="layout--02">
+                            <saa-message-title>Offer Ends Soon!</saa-message-title>
+                            <saa-message-content>Act fast and renew your account in the next five days to recieve 20% off!</saa-message-content>
+                        </saa-message>
+                    </saa-modal-highlight>
+                </saa-modal>
+            </p>
+
             <saa-tabs>
                 <saa-tabs-pane title="Styles in Angular">
                     <p class="content__paragraph">
